--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,47 +8,14 @@ services:
       - "80:80"
     volumes:
       - ota-data:/data
-    working_dir: /data # Establecer como directorio de trabajo principal
-    command: >
-      /bin/bash -c "
-      set -e && \
-      echo '--- Ensuring git is installed ---' && \
-      # Instalar git silenciosamente
-      apt-get update > /dev/null && apt-get install -y git > /dev/null && \
-      REPO_URL='https://github.com/gilo2754/qr_esp32.git' && \
-      TARGET_DIR='/data' && \
-      # Usar siempre la rama 'master'
-      BRANCH_NAME="master" && \
-      echo "--- Target Git Branch: [$BRANCH_NAME] ---" && \
-      # Comprobar si el repositorio ya existe
-      if [ -d "$TARGET_DIR/.git" ]; then \
-        echo "--- Repository exists in $TARGET_DIR. Updating branch '$BRANCH_NAME'... ---" && \
-        cd "$TARGET_DIR" && \
-        # Traer cambios remotos
-        git fetch origin && \
-        # Cambiar a la rama deseada (fallará si la rama no existe localmente después de fetch)
-        git checkout "$BRANCH_NAME" && \
-        # Asegurar que la rama local coincida exactamente con la remota
-        git reset --hard "origin/$BRANCH_NAME" && \
-        # Limpiar archivos no rastreados
-        git clean -fdx && \
-        # Hacer pull (aunque reset --hard ya debería haberla alineado)
-        git pull origin "$BRANCH_NAME"; \
-      else \
-        echo "--- Repository does not exist in $TARGET_DIR. Cloning branch '$BRANCH_NAME'... ---" && \
-        # Clonar solo la rama específica en el directorio destino
-        git clone --single-branch --branch "$BRANCH_NAME" "$REPO_URL" "$TARGET_DIR"; \
-      fi && \
-      # Ir al subdirectorio correcto y iniciar el servidor
-      if [ -d "$TARGET_DIR/qr_esp32" ]; then \
-        echo '--- Starting HTTP server in /data/qr_esp32 directory ---' && \
-        cd "$TARGET_DIR/qr_esp32" && \
-        python3 -m http.server 80; \
-      else \
-        echo "ERROR: Directory '$TARGET_DIR/qr_esp32' not found after git operations!" && \
-        exit 1; \
-      fi \
-      "
+      # Map the local entrypoint script into the container
+      - ./entrypoint.sh:/usr/local/bin/entrypoint.sh
+    working_dir: /data # Keep working dir as /data as git clones there
+    # Set the entrypoint script to be executed
+    entrypoint: ["/bin/bash", "/usr/local/bin/entrypoint.sh"]
+    # The command is now executed by the entrypoint script
+    # command: >
+    #   /bin/bash -c " ... complex script removed ... "
     restart: unless-stopped
 
 volumes:
