--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,15 +7,42 @@ services:
     ports:
       - "80:80"
     volumes:
+      # Mount the data volume
       - ota-data:/data
-      # Map the local entrypoint script into the container
-      - ./entrypoint.sh:/usr/local/bin/entrypoint.sh
-    working_dir: /data # Keep working dir as /data as git clones there
-    # Set the entrypoint script to be executed
-    entrypoint: ["/bin/bash", "/usr/local/bin/entrypoint.sh"]
-    # The command is now executed by the entrypoint script
-    # command: >
-    #   /bin/bash -c " ... complex script removed ... "
+    # Set initial working dir for the script
+    working_dir: /data
+    # Command to clone/update repo and start server
+    command: >
+      /bin/bash -c "
+      set -e && \
+      echo '--- Ensuring git is installed ---' && \
+      apt-get update > /dev/null && apt-get install -y git > /dev/null && \
+      REPO_URL='https://github.com/gilo2754/qr_esp32.git' && \
+      TARGET_DIR='/data' && \
+      BRANCH_NAME='master' && \
+      echo \"--- Target Git Branch: [$BRANCH_NAME] ---\" && \
+      if [ -d \"$TARGET_DIR/.git\" ]; then \
+        echo \"--- Repository exists in $TARGET_DIR. Updating branch '$BRANCH_NAME'... ---\" && \
+        cd \"$TARGET_DIR\" && \
+        git fetch origin && \
+        git checkout \"$BRANCH_NAME\" && \
+        git reset --hard \"origin/$BRANCH_NAME\" && \
+        git clean -fdx && \
+        git pull origin \"$BRANCH_NAME\"; \
+      else \
+        echo \"--- Repository does not exist in $TARGET_DIR. Cloning branch '$BRANCH_NAME'... ---\" && \
+        git clone --single-branch --branch \"$BRANCH_NAME\" \"$REPO_URL\" \"$TARGET_DIR\"; \
+      fi && \
+      APP_DIR=\"$TARGET_DIR/qr_esp32\" && \
+      if [ -d \"$APP_DIR\" ]; then \
+        echo \"--- Starting HTTP server in $APP_DIR directory ---\" && \
+        cd \"$APP_DIR\" && \
+        exec python3 -m http.server 80; \
+      else \
+        echo \"ERROR: Directory '$APP_DIR' not found after git operations!\" && \
+        exit 1; \
+      fi \
+      "
     restart: unless-stopped
 
 volumes:
